--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "feedparser>=6.0.11",
+    "lxml>=5.3.2",
     "marker-pdf>=1.6.2",
     "pandas>=2.2.3",
     "ruff>=0.11.5",
+    "selenium>=4.31.0",
 ]
