feat(website-agentic-conference) COM-02 Refactored the entire backend flow according to iteration discussed with professor

--- a/website-v2/server/.vscode/launch.json
+++ b/website-v2/server/.vscode/launch.json
@@ -7,11 +7,11 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Implement Agentic Conference Website - Server",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${file}"
+            "program": "server.js"
         }
     ]
 }
