--- a/website-v2/server/package.json
+++ b/website-v2/server/package.json
@@ -9,6 +9,7 @@
     "setup-db": "node setup_db.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.50.3",
     "@hapi/boom": "^10.0.1",
     "@hapi/hapi": "^21.3.2",
     "@hapi/inert": "^7.1.0",
@@ -16,7 +17,10 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "hapi-rate-limit": "^5.0.0",
+    "knex": "^3.1.0",
+    "openai": "^4.98.0",
     "pg": "^8.10.0",
+    "uuid": "^11.1.0",
     "xml2js": "^0.5.0"
   },
   "devDependencies": {
