--- a/website-v2/client/package.json
+++ b/website-v2/client/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^4.1.0",
     "js-yaml": "^4.1.0",
     "react": "^19.1.0",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^7.6.0",
