--- a/website-v2/package.json
+++ b/website-v2/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "axios": "^1.9.0",
+    "js-yaml": "^4.1.0",
+    "xml2js": "^0.6.2"
   }
-} 
+}
