Added feature to display real time leaderboard

--- a/website-v2/server/package.json
+++ b/website-v2/server/package.json
@@ -14,9 +14,11 @@
     "@hapi/hapi": "^21.3.2",
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
+    "@hapi/jwt": "^3.2.0",
     "axios": "^1.6.7",
     "dotenv": "^16.0.3",
     "hapi-rate-limit": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "node-cache": "^5.1.2",
     "objection": "^3.1.5",
