--- a/website-v2/server/package.json
+++ b/website-v2/server/package.json
@@ -24,6 +24,7 @@
     "objection": "^3.1.5",
     "openai": "^4.98.0",
     "pg": "^8.10.0",
+    "sequelize": "^6.37.7",
     "uuid": "^11.1.0",
     "ws": "^8.18.2",
     "xml2js": "^0.6.2"
