--- a/website-v2/server/package.json
+++ b/website-v2/server/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "setup-db": "node setup_db.js"
+    "setup-db": "node setup_db.js",
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "migrate:make": "knex migrate:make",
+    "seed": "knex seed:run",
+    "seed:make": "knex seed:make"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.50.3",
@@ -15,6 +20,7 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
     "@hapi/jwt": "^3.2.0",
+    "@hapi/vision": "^7.0.3",
     "axios": "^1.6.7",
     "dotenv": "^16.0.3",
     "hapi-rate-limit": "^5.0.0",
@@ -30,6 +36,8 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@hapi/code": "^9.0.3",
+    "@hapi/lab": "^26.0.0",
     "js-yaml": "^4.1.0",
     "nodemon": "^2.0.22"
   }
