--- a/website-v2/server/package.json
+++ b/website-v2/server/package.json
@@ -11,7 +11,11 @@
     "migrate:rollback": "knex migrate:rollback",
     "migrate:make": "knex migrate:make",
     "seed": "knex seed:run",
-    "seed:make": "knex seed:make"
+    "seed:make": "knex seed:make",
+    "test": "lab -c",
+    "test:watch": "lab -c -w",
+    "test:coverage": "lab -c -r html -o coverage.html",
+    "test:verbose": "lab -c -v"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.50.3",
