--- a/website-v2/server/.env.example
+++ b/website-v2/server/.env.example
@@ -8,3 +8,18 @@ PGPORT=5432                 # PostgreSQL port
 
 NODE_ENV=development
 CACHE_TTL=3600
+
+# OpenAI and Anthropic API Keys
+OPENAI_API_KEY=your-openai-key
+ANTHROPIC_API_KEY=your-anthropic-key
+
+# Agent Configuration
+JUDGE_PROVIDER=openai
+JUDGE_MODEL=gpt-4
+
+
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
+GITHUB_CALLBACK_URL=Local-http://localhost:5000/api/v2/auth/github/callback
+JWT_SECRET=your-dummy-jwt-auth-to-be-set-in-production
+FRONTEND_URL=Local-http://localhost:3000
